syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "src/main/proto/wfa/measurement/internal/kingdom/report_config_schedule.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for ReportsConfigSchedules.
service ReportConfigScheduleStorage {
  // Streams ready ReportConfigSchedules: those that need a new Report.
  rpc StreamReadyReportConfigSchedules(StreamReadyReportConfigSchedulesRequest)
      returns (stream ReportConfigSchedule);
}

message StreamReadyReportConfigSchedulesRequest {
  int64 limit = 1;
}
